# routers/groups/user.go
@@ -2,6 +2,7 @@ package routers
 
 import (
 	controllers "be-mini-project/controllers"
+	"be-mini-project/routers/middleware"
 
 	"github.com/gin-gonic/gin"
 )
@@ -9,6 +10,6 @@ import (
 func UserRoutes(route *gin.Engine, apiVersion string) {
 	var ctrl controllers.UserController
 	groupRoutes := route.Group(apiVersion)
-	groupRoutes.GET("user/", ctrl.GetData)
-	groupRoutes.POST("user/", ctrl.CreateData)
+	groupRoutes.GET("user/", middleware.AuthMiddleware(), ctrl.GetData)
+	groupRoutes.POST("user/", middleware.AuthMiddleware(), ctrl.CreateData)
 }
