# routers/middleware/auth.go
@@ -1,0 +1,30 @@
+package middleware
+
+import (
+	"be-mini-project/utils"
+	"net/http"
+
+	"github.com/gin-gonic/gin"
+)
+
+func AuthMiddleware() gin.HandlerFunc {
+	return func(c *gin.Context) {
+		tokenString := c.GetHeader("Authorization")
+		if tokenString == "" {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Authorization header is required"})
+			c.Abort()
+			return
+		}
+
+		tokenString = tokenString[3:]
+		tokenString = tokenString[:len(tokenString)-5]
+		claims, err := utils.VerifyToken(tokenString)
+		if err != nil {
+			c.JSON(http.StatusUnauthorized, gin.H{"error": "Invalid token"})
+			c.Abort()
+			return
+		}
+		c.Set("userID", claims.UserID)
+		c.Next()
+	}
+}
